--- a/_posts/2025-09-12-bro.md
+++ b/_posts/2025-09-12-bro.md
@@ -1,16 +1,15 @@
 ---
-
 title: "The Missing Universe: A First Look at Dark Matter and Dark Energy"
 date: 2025-08-30
-categories: [cosmology, astrophysics, dark matter, dark energy, particle physics]
-use_math: true
+categories: ["cosmology", "astrophysics", "dark-matter", "dark-energy", "particle-physics"]
 layout: single
 author_profile: true
 read_time: true
 comments: true
+mathjax: true
 excerpt: "Most of the universe is invisible. What we see is just a sliver, as the rest hides in the form of dark matter and dark energy. This post begins the journey into the unseen cosmos."
-
 ---
+
 
 ## Introduction
 
@@ -27,8 +26,6 @@ E = mc^2
 $$
 
 And in natural units $\hbar = c = 1$, they are equivalent. So mass contents and energy contents are fundamentally the same thing, and if you divide this with the volume, you arrive at the energy density ($P$). Therefore, this elegant quantity accounts for many fundamental and easily visualizable parameters.  
-
-
 
 Now that we have a defined metric, we can quantify the percentages of the universe and definitively state how much of it is known to us and how much of it remains elusive. So how much of it can we see and detect?  
 
